--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.19.0
+  firebase_auth: ^0.18.2
+  cloud_firestore: ^0.14.2
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +58,7 @@ flutter:
     - assets/svg/tips.svg
     - assets/images/google.png
     - assets/images/salmon.png
+    - assets/images/sliderimage.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
